--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <body>
   <div class="wrap">
-    <h1>Broke to Bougie</h1>
+    <h1>Broke to Bougie 🤑</h1>
     <p class="sub">
       Educational tool only; not financial advice. Simplified assumptions (constant returns, constant monthly contributions, ignores eligibility limits/taxes/plan specifics).
     </p>
